--- a/index.html
+++ b/index.html
@@ -58,24 +58,46 @@
       <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.svg" alt="">
       <h1 class="text-uppercase mb-0">MMidtgaard</h1>
       <hr class="star-light">
-      <h2 class="font-weight-light mb-0">Programmering - Hjemmesider - Apps</h2>
+      <h2 class="font-weight-light mb-0">IT i øjenhøjde</h2>
     </div>
   </header>
 
-  <!-- Portfolio Grid Section -->
+  <!-- About Section -->
   <section class="portfolio" id="portfolio">
     <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Ydelser</h2>
+      <h2 class="text-center text-uppercase text-secondary mb-0">Om mig</h2>
       <hr class="star-dark mb-5">
+      <div class="row">
+        <div class="col-lg-4 ml-auto">
+          <p class="lead">Mit navn er Martin Midtgaard, jeg har en passion for software- og webudvikling </p>
+        </div>
+        <div class="col-lg-4 mr-auto">
+          <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+        </div>
+      </div>
+      <div class="text-center mt-4">
+        <a class="btn btn-xl btn-outline-dark" href="#">
+          <i class="fas fa-download mr-2"></i>
+          Download Now!
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Portfolio Grid Section -->
+  <section class= "portfolio bg-primary" id="about">
+    <div class="container">
+      <h2 class="text-center text-uppercase text-white mb-0">Ydelser</h2>
+      <hr class="star-light mb-5">
       <div class="row">
         <div class="col-md-6 col-lg-4">
           <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
             <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-              <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
+              <div class="portfolio-item-caption-content my-auto w-100 text-center text-light">
                 <i class="fas fa-search-plus fa-3x"></i>
               </div>
             </div>
-            <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
+            <img class="img-fluid" src="img/portfolio/programming.svg.png" alt="">
           </a>
         </div>
         <div class="col-md-6 col-lg-4">
@@ -128,28 +150,6 @@
             <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
           </a>
         </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section class="bg-primary text-white mb-0" id="about">
-    <div class="container">
-      <h2 class="text-center text-uppercase text-white">About</h2>
-      <hr class="star-light mb-5">
-      <div class="row">
-        <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-        </div>
-        <div class="col-lg-4 mr-auto">
-          <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-        </div>
-      </div>
-      <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="#">
-          <i class="fas fa-download mr-2"></i>
-          Download Now!
-        </a>
       </div>
     </div>
   </section>
