--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
-      <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
-      <hr class="star-dark mb-5">
+      <h2 class="text-center text-uppercase text-white mb-0">Ydelser</h2>
+      <hr class="star-contact mb-5">
       <div class="row">
         <div class="col-lg-8 mx-auto">
           <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
